src/LinkAPI.h

#    define LINKAPI_MAX_CONTEXT_LENGTH 256


	/**
	 * a 3D vector structure
	 */
	typedef struct LINKAPI_VECTOR_3D {
		float x;
		float y;
		float z;
	} LINKAPI_VECTOR_3D;


	/**
	 * error codes hinting at the root cause of a failure
	 */
	typedef enum LINKAPI_ERROR_CODE {
		/** no error */
		LINKAPI_ERROR_CODE_NO_ERROR = 0,
		/** no handle to the shared memory structure was received */
		LINKAPI_ERROR_CODE_NO_HANDLE = 1,
		/** no structure could be initialized */
		LINKAPI_ERROR_CODE_NO_STRUCTURE = 2,
		/** the shared memory was not initialized */
		LINKAPI_ERROR_CODE_NO_MEMORY_WAS_INITIALIZED = 3,
		/** the provided context length was out of bounds */
		LINKAPI_ERROR_CODE_CONTEXT_LENGTH_EXCEEDED = 4
	} LINKAPI_ERROR_CODE;


	/**
	 * set the identity only
	 *
	 * Notice: The identity does not need to be updated every single frame. It
	 * shouldn't change more than a few times per second if at all during a game.
	 *
	 * Identity should contain a string which uniquely identifies the player in
	 * the given context. This is usually satisfied by the in-game player name
	 * or the players ID (player-/connection-ID on the server or a global ID).
	 *
	 * Additionally the identity can contain any additional information about
	 * the player that might be interesting for the mumble server.
	 *
	 * We recommend using an easily parseable format like JSON or CSV for
	 * encoding the information but this is up to the game. Remember that the
	 * link structures only allow for limited characters of identity data.
	 *
	 * @param identity	unique id of the user in a given context
	 *
	 * @return	an error code, see <code>enum LINKAPI_ERROR_CODE</code>
	 */
	LINKAPI_API
	LINKAPI_ERROR_CODE setIdentity(wchar_t identity[LINKAPI_MAX_IDENTITY_LENGTH]);


	/**
	 * sets the context
	 *
	 * Notice: The context does not need to be updated every single frame. It
	 * shouldn't change more than a few times per second if at all during a game.
	 *
	 * The context string is used to determine which users on a Mumble server
	 * should hear each other positionally. If context between two mumble user
	 * does not match the positional audio data is stripped server-side and
	 * voice will be received as non-positional.
	 *
	 * Accordingly the context should only match for players on the same server
	 * in the same game on the same map. Whether to include things like team in
	 * this string depends on the game itself. When in doubt err on the side of
	 * including less. This gives more flexibility later on.
	 *
	 * @param context	a generic context
	 * @param context_len	the length of the context (number of active array elements)
	 *                          LINKAPI_MAX_CONTEXT_LENGTH limits this number
	 *
	 * @return	an error code, see <code>enum LINKAPI_ERROR_CODE</code>
	 */
	LINKAPI_API
	LINKAPI_ERROR_CODE setContext(
			unsigned char context[],
			LINKAPI_NATIVE_UINT32 context_len);


	/**
	 * sets and commits the identity AND context
	 *
	 * Notice: The identity and/or context does not need to be updated every
	 * single frame. It shouldn't change more than a few times per second if at
	 * all during a game.
	 *
	 * see <code>setIdentity(...)</code> and <code>setContext(...)</code> for detailed information
	 *
	 * @param identity	unique id of the user
	 * @param context	a generic context
	 * @param context_len	the length of the context (number of active array elements)
	 *                          LINKAPI_MAX_CONTEXT_LENGTH limits this number
	 *
	 * @return	an error code, see <code>enum LINKAPI_ERROR_CODE</code>
	 */
	LINKAPI_API
	LINKAPI_ERROR_CODE commitIdentityAndContext(
			wchar_t identity[LINKAPI_MAX_IDENTITY_LENGTH],
			unsigned char context[LINKAPI_MAX_CONTEXT_LENGTH],
			LINKAPI_NATIVE_UINT32 context_len);


	/**
	 * sets the identity AND context
	 *
	 * Notice: The identity and/or context does not need to be updated every
	 * single frame. It shouldn't change more than a few times per second if at
	 * all during a game.
	 *
	 * see <code>setIdentity(..)</code> and <code>setContext(..)</code> for detailed informations
	 *
	 * @param identity	unique id of the user
	 * @param context	a generic context
	 * @param context_len	the length of the context (number of active array elements)
	 *                          LINKAPI_MAX_CONTEXT_LENGTH limits this number
	 *
	 * @return	an error code, see <code>enum LINKAPI_ERROR_CODE</code>
	 */
	LINKAPI_API
	LINKAPI_ERROR_CODE setIdentityAndContext(
			wchar_t identity[LINKAPI_MAX_IDENTITY_LENGTH],
			unsigned char context[LINKAPI_MAX_CONTEXT_LENGTH],
			LINKAPI_NATIVE_UINT32 context_len);


	/**
	 * sets and commits the display name of the application currently linked
	 * with mumble
	 *
	 * Notice: This does not need to be updated every single frame. It shouldn't
	 * change at all during a game.
	 *
	 *      see <code>setName(...)</code> for details
	 *
	 * @param name	the display name of the application which links with mumble (i.e. L"TestLink")
	 *
	 * @return	an error code, see <code>enum LINKAPI_ERROR_CODE</code>
	 */
	LINKAPI_API
	LINKAPI_ERROR_CODE commitName(wchar_t name[LINKAPI_MAX_NAME_LENGTH]);


	/**
	 * the display name of the application currently linked with mumble
	 *      see <code>setName(...)</code> for details
	 * @return application name
	 */
	LINKAPI_API
	wchar_t* getName();


	/**
	 * sets only the display name of the application currently linked with mumble
	 *
	 * Notice: This does not need to be updated every single frame. It shouldn't
	 * change at all during a game.
	 *
	 * this name is shown in the mumble interface to indicate which plugin's
	 * positional audio is being used (i.e. used for the "XXX linked." message
	 * in the mumble log)
	 *
	 * @param name	the display name of the application which links with mumble (i.e. L"TestLink")
	 *
	 * @return	an error code, see <code>enum LINKAPI_ERROR_CODE</code>
	 */
	LINKAPI_API
	LINKAPI_ERROR_CODE setName(wchar_t name[LINKAPI_MAX_NAME_LENGTH]);


	/**
	 * sets and commits the application's description
	 *
	 * Notice: This does not need to be updated every single frame. It shouldn't
	 * change at all during a game.
	 *
	 *      see <code>setDescription(...)</code> for details
	 *
	 * @param description	a text stating the purpose of this link
	 *
	 * @return	an error code, see <code>enum LINKAPI_ERROR_CODE</code>
	 */
	LINKAPI_API
	LINKAPI_ERROR_CODE commitDescription(wchar_t description[LINKAPI_MAX_DESCRIPTION_LENGTH]);


	/**
	 * the linked application's description
	 *      see <code>setDescription(...)</code> for details
	 * @return a text stating the purpose of this link
	 */
	LINKAPI_API
	wchar_t* getDescription();


	/**
	 * sets only the application's description
	 *
	 * Notice: This does not need to be updated every single frame. It shouldn't
	 * change at all during a game.
	 *
	 * this is the text to explain the plugin and its purpose
	 *
	 * @param description	a text stating the purpose of this link
	 *
	 * @return	an error code, see <code>enum LINKAPI_ERROR_CODE</code>
	 */
	LINKAPI_API
	LINKAPI_ERROR_CODE setDescription(wchar_t description[LINKAPI_MAX_DESCRIPTION_LENGTH]);


	/**
	 * updates and commits the avatar and camera vectors
	 *
	 * Notice: Mumble fetches these values 50 times a second, so please update
	 * them every frame.
	 *
	 * @param avatarPosition	Position of the avatar.
	 * @param avatarFront	Unit vector pointing out of the avatar's eyes.
	 * @param avatarTop	Unit vector pointing out of the top of the avatar's head.
	 * @param cameraPosition	Position of the camera.
	 * @param cameraFront	Unit vector pointing out of the camera's lense.
	 * @param cameraTop	Unit vector pointing out of the camera's top.
	 *
	 * @return	an error code, see <code>enum LINKAPI_ERROR_CODE</code>
	 */
	LINKAPI_API
	LINKAPI_ERROR_CODE commitVectors(
			float avatarPosition[3],
			float avatarFront[3],
			float avatarTop[3],
			float cameraPosition[3],
			float cameraFront[3],
			float cameraTop[3]);


	/**
	 * sets avatar and camera vectors
	 *
	 * Notice: Mumble fetches these values 50 times a second, so please update
	 * them every frame.
	 *
	 * @param avatarPosition	Position of the avatar.
	 * @param avatarFront	Unit vector pointing out of the avatar's eyes.
	 * @param avatarTop	Unit vector pointing out of the top of the avatar's head.
	 * @param cameraPosition	Position of the camera.
	 * @param cameraFront	Unit vector pointing out of the camera's lense.
	 * @param cameraTop	Unit vector pointing out of the camera's top.
	 *
	 * @return	an error code, see <code>enum LINKAPI_ERROR_CODE</code>
	 */
	LINKAPI_API
	LINKAPI_ERROR_CODE setVectors(
			float avatarPosition[3],
			float avatarFront[3],
			float avatarTop[3],
			float cameraPosition[3],
			float cameraFront[3],
			float cameraTop[3]);


	/**
	 * updates and commits avatar AND camera vectors with the same values
	 *
	 * Notice: Mumble fetches these values 50 times a second, so please update
	 * them every frame.
	 *
	 *      see <code>setVectorsAvatarAsCamera(...)</code> for details
	 *
	 * @param avatarPosition	Position of the avatar and camera.
	 * @param avatarFront	Unit vector pointing out of the camera/avatar's eyes.
	 * @param avatarTop	Unit vector pointing out of the top of the avatar's head/camera's top.
	 *
	 * @return	an error code, see <code>enum LINKAPI_ERROR_CODE</code>
	 */
	LINKAPI_API
	LINKAPI_ERROR_CODE commitVectorsAvatarAsCamera(
			float avatarPosition[3],
			float avatarFront[3],
			float avatarTop[3]);


	/**
	 * sets avatar AND camera vectors with the same values
	 *
	 * this simply reuses the given vectors for the camera
	 *
	 * short cut function to use when the camera of the game/program is not
	 * independent of the avatar
	 *
	 * Notice: Mumble fetches these values 50 times a second, so please update
	 * them every frame.
	 *
	 *      see the respective single vector setters for details
	 *
	 * @param avatarPosition	Position of the avatar and camera.
	 * @param avatarFront	Unit vector pointing out of the camera/avatar's eyes.
	 * @param avatarTop	Unit vector pointing out of the top of the avatar's head/camera's top.
	 *
	 * @return	an error code, see <code>enum LINKAPI_ERROR_CODE</code>
	 */
	LINKAPI_API
	LINKAPI_ERROR_CODE setVectorsAvatarAsCamera(
			float avatarPosition[3],
			float avatarFront[3],
			float avatarTop[3]);


	/**
	 * The position of the avatar
	 *
	 * location of the avatar or avatar's head where it is located in the 3D game world
	 *
	 * @return a 3D vector
	 */
	LINKAPI_API
	LINKAPI_VECTOR_3D* getAvatarPosition();