tests/java/src/zsawyer/mumble/bridj/LinkAPILibrary.java


	/**
	 * sets the context
	 *
	 * Notice: The context does not need to be updated every single frame. It
	 * shouldn't change more than a few times per second if at all during a
	 * game.
	 *
	 * The context string is used to determine which users on a Mumble server
	 * should hear each other positionally. If context between two mumble user
	 * does not match the positional audio data is stripped server-side and
	 * voice will be received as non-positional.
	 *
	 * Accordingly the context should only match for players on the same server
	 * in the same game on the same map. Whether to include things like team in
	 * this string depends on the game itself. When in doubt err on the side of
	 * including less. This gives more flexibility later on.
	 *
	 * @param context	    a generic context
	 * @param context_len	the length of the context (number of array elements)
	 *                       {@link #LINKAPI_MAX_CONTEXT_LENGTH} limits this number
	 *
	 * @return an error code {@link LINKAPI_ERROR_CODE}
	 */
	/*
	 * Original signature :
	 * <code>LINKAPI_ERROR_CODE setContext(unsigned char[], int)</code><br>
	 * <i>native declaration : line 288</i>
	 */
	native public static IntValuedEnum<LinkAPILibrary.LINKAPI_ERROR_CODE> setContext(
			Pointer<Byte> context, int context_len);

	/**
	 * sets and commits the identity AND context
	 *
	 * Notice: The identity and/or context does not need to be updated every
	 * single frame. It shouldn't change more than a few times per second if at
	 * all during a game.
	 *
	 * see {@link #setIdentity(org.bridj.Pointer) } and
	 * {@link #setContext(org.bridj.Pointer, int) } for detailed information
	 *
	 * @param identity	   unique id of the user
	 * @param context	    a generic context
	 * @param context_len	the length of the context (number of array elements)
	 *                       {@link #LINKAPI_MAX_CONTEXT_LENGTH} limits this number
	 *
	 * @return an error code {@link LINKAPI_ERROR_CODE}
	 */
	/*
	 * Original signature :
	 * <code>LINKAPI_ERROR_CODE commitIdentityAndContext(wchar_t[256], unsigned char[256], int)</code><br>
	 * <i>native declaration : line 307</i>
	 */
	native public static IntValuedEnum<LinkAPILibrary.LINKAPI_ERROR_CODE> commitIdentityAndContext(
			Pointer<Character> identity, Pointer<Byte> context, int context_len);

	/**
	 * sets the identity AND context
	 *
	 * Notice: The identity and/or context does not need to be updated every
	 * single frame. It shouldn't change more than a few times per second if at
	 * all during a game.
	 *
	 * see {@link #setIdentity(org.bridj.Pointer) } and
	 * {@link #setContext(org.bridj.Pointer, int) } for detailed informations
	 *
	 * @param identity	   unique id of the user
	 * @param context	    a generic context
	 * @param context_len	the length of the context (number of array elements)
	 *                       {@link #LINKAPI_MAX_CONTEXT_LENGTH} limits this number
	 *
	 * @return an error code {@link LINKAPI_ERROR_CODE}
	 */
	/*
	 * Original signature :
	 * <code>LINKAPI_ERROR_CODE setIdentityAndContext(wchar_t[], unsigned char[], int)</code><br>
	 * <i>native declaration : line 329</i>
	 */
	native public static IntValuedEnum<LinkAPILibrary.LINKAPI_ERROR_CODE> setIdentityAndContext(
			Pointer<Character> identity, Pointer<Byte> context, int context_len);

	/**
	 * sets and commits the display name of the application currently linked
	 * with mumble
	 *
	 * Notice: This does not need to be updated every single frame. It shouldn't
	 * change at all during a game.
	 *
	 * see {@link #setName(java.nio.CharBuffer)} for details
	 *
	 * @param name	the display name of the application which links with mumble
	 *                (i.e. L"TestLink")
	 *
	 * @return an error code {@link LINKAPI_ERROR_CODE}
	 */
	/*
	 * Original signature :
	 * <code>LINKAPI_ERROR_CODE commitName(wchar_t[256])</code><br>
	 * <i>native declaration : line 344</i>
	 */
	native public static IntValuedEnum<LinkAPILibrary.LINKAPI_ERROR_CODE> commitName(
			Pointer<Character> name);

	/**
	 * the display name of the application currently linked with mumble
	 *
	 * see {@link #setName(java.nio.CharBuffer)} for details
	 *
	 * @return application name
	 */
	/*	 * Original signature :
	 * <code>wchar_t* getName()</code><br>
	 * <i>native declaration : line 352</i>
	 */
	native public static Pointer<Character> getName();

	/**
	 * sets only the display name of the application currently linked with
	 * mumble
	 *
	 * Notice: This does not need to be updated every single frame. It shouldn't
	 * change at all during a game.
	 *
	 * this name is shown in the mumble interface to indicate which plugin's
	 * positional audio is being used (i.e. used for the "XXX linked." message
	 * in the mumble log)
	 *
	 * @param name	the display name of the application which links with mumble
	 *                (i.e. L"TestLink")
	 *
	 * @return an error code {@link LINKAPI_ERROR_CODE}
	 */
	/*
	 * Original signature :
	 * <code>LINKAPI_ERROR_CODE setName(wchar_t[256])</code><br>
	 * <i>native declaration : line 369</i>
	 */
	native public static IntValuedEnum<LinkAPILibrary.LINKAPI_ERROR_CODE> setName(
			Pointer<Character> name);

	/**
	 * sets and commits the application's description
	 *
	 * Notice: This does not need to be updated every single frame. It shouldn't
	 * change at all during a game.
	 *
	 * see {@link #setDescription(org.bridj.Pointer) } for details
	 *
	 * @param description	a text stating the purpose of this link
	 *
	 * @return an error code {@link LINKAPI_ERROR_CODE}
	 */
	/*
	 * Original signature :
	 * <code>LINKAPI_ERROR_CODE commitDescription(wchar_t[2048])</code><br>
	 * <i>native declaration : line 384</i>
	 */
	native public static IntValuedEnum<LinkAPILibrary.LINKAPI_ERROR_CODE> commitDescription(
			Pointer<Character> description);

	/**
	 * the linked application's description
	 *
	 * see {@link #setDescription(java.nio.CharBuffer)} for details
	 *
	 * @return a text stating the purpose of this link
	 */
	/*
	 * Original signature :
	 * <code>wchar_t* getDescription()</code><br>
	 * <i>native declaration : line 392</i>
	 */
	native public static Pointer<Character> getDescription();

	/**
	 * sets only the application's description
	 *
	 * Notice: This does not need to be updated every single frame. It shouldn't
	 * change at all during a game.
	 *
	 * this is the text to explain the plugin and its purpose
	 *
	 * @param description	a text stating the purpose of this link
	 *
	 * @return an error code {@link LINKAPI_ERROR_CODE}
	 *
	 */
	/*
	 * Original signature :
	 * <code>LINKAPI_ERROR_CODE setDescription(wchar_t[2048])</code><br>
	 * <i>native declaration : line 407</i>
	 */
	native public static IntValuedEnum<LinkAPILibrary.LINKAPI_ERROR_CODE> setDescription(
			Pointer<Character> description);

	/**
	 * updates and commits the avatar and camera vectors
	 *
	 * Notice: Mumble fetches these values 50 times a second, so please update
	 * them every frame.
	 *
	 * @param fAvatarPosition	Position of the avatar.
	 * @param fAvatarFront	   Unit vector pointing out of the avatar's eyes.
	 * @param fAvatarTop	     Unit vector pointing out of the top of the
	 *                           avatar's head.
	 * @param fCameraPosition	Position of the camera.
	 * @param fCameraFront	   Unit vector pointing out of the camera's lense.
	 * @param fCameraTop	     Unit vector pointing out of the camera's top.
	 *
	 * @return an error code {@link LINKAPI_ERROR_CODE}
	 */
	/*
	 * Original signature :
	 * <code>LINKAPI_ERROR_CODE commitVectors(float[3], float[3], float[3], float[3], float[3], float[3])</code><br>
	 * <i>native declaration : line 425</i>
	 */
	native public static IntValuedEnum<LinkAPILibrary.LINKAPI_ERROR_CODE> commitVectors(
			Pointer<Float> fAvatarPosition, Pointer<Float> fAvatarFront,
			Pointer<Float> fAvatarTop, Pointer<Float> fCameraPosition,
			Pointer<Float> fCameraFront, Pointer<Float> fCameraTop);

	/**
	 * sets avatar and camera vectors
	 *
	 * Notice: Mumble fetches these values 50 times a second, so please update
	 * them every frame.
	 *
	 * @param fAvatarPosition	Position of the avatar.
	 * @param fAvatarFront	   Unit vector pointing out of the avatar's eyes.
	 * @param fAvatarTop	     Unit vector pointing out of the top of the
	 *                           avatar's head.
	 * @param fCameraPosition	Position of the camera.
	 * @param fCameraFront	   Unit vector pointing out of the camera's lense.
	 * @param fCameraTop	     Unit vector pointing out of the camera's top.
	 *
	 * @return an error code {@link LINKAPI_ERROR_CODE}
	 */
	/*
	 * Original signature :
	 * <code>LINKAPI_ERROR_CODE setVectors(float[3], float[3], float[3], float[3], float[3], float[3])</code><br>
	 * <i>native declaration : line 449</i>
	 */
	native public static IntValuedEnum<LinkAPILibrary.LINKAPI_ERROR_CODE> setVectors(
			Pointer<Float> fAvatarPosition, Pointer<Float> fAvatarFront,
			Pointer<Float> fAvatarTop, Pointer<Float> fCameraPosition,
			Pointer<Float> fCameraFront, Pointer<Float> fCameraTop);

	/**
	 * updates and commits avatar AND camera vectors with the same values
	 *
	 * Notice: Mumble fetches these values 50 times a second, so please update
	 * them every frame.
	 *
	 * see
	 * {@link #setVectorsAvatarAsCamera(org.bridj.Pointer, org.bridj.Pointer, org.bridj.Pointer)}
	 * for details
	 *
	 * @param fAvatarPosition	Position of the avatar and camera.
	 * @param fAvatarFront	   Unit vector pointing out of the camera/avatar's
	 *                           eyes.
	 * @param fAvatarTop	     Unit vector pointing out of the top of the
	 *                           avatar's head/camera's top.
	 *
	 * @return an error code {@link LINKAPI_ERROR_CODE}
	 */
	/*
	 * Original signature :
	 * <code>LINKAPI_ERROR_CODE commitVectorsAvatarAsCamera(float[3], float[3], float[3])</code><br>
	 * <i>native declaration : line 472</i>
	 */
	native public static IntValuedEnum<LinkAPILibrary.LINKAPI_ERROR_CODE> commitVectorsAvatarAsCamera(
			Pointer<Float> fAvatarPosition, Pointer<Float> fAvatarFront,
			Pointer<Float> fAvatarTop);

	/**
	 * sets avatar AND camera vectors with the same values
	 *
	 * this simply reuses the given vectors for the camera
	 *
	 * short cut function to use when the camera of the game/program is not
	 * independent of the avatar
	 *
	 * Notice: Mumble fetches these values 50 times a second, so please update
	 * them every frame.
	 *
	 * see the respective single vector setters for details
	 *
	 * @param fAvatarPosition	Position of the avatar and camera.
	 * @param fAvatarFront	   Unit vector pointing out of the camera/avatar's
	 *                           eyes.
	 * @param fAvatarTop	     Unit vector pointing out of the top of the
	 *                           avatar's head/camera's top.
	 *
	 * @return an error code {@link LINKAPI_ERROR_CODE}
	 */
	/*
	 * Original signature :
	 * <code>LINKAPI_ERROR_CODE setVectorsAvatarAsCamera(float[3], float[3], float[3])</code><br>
	 * <i>native declaration : line 497</i>
	 */
	native public static IntValuedEnum<LinkAPILibrary.LINKAPI_ERROR_CODE> setVectorsAvatarAsCamera(
			Pointer<Float> fAvatarPosition, Pointer<Float> fAvatarFront,
			Pointer<Float> fAvatarTop);

	/**
	 * The position of the avatar
	 *
	 * location of the avatar or avatar's head where it is located in the 3D
	 * game world
	 *
	 * @return a 3D vector
	 */
	/*
	 * Original signature :
	 * <code>float* getAvatarPosition()</code><br>
	 * <i>native declaration : line 510</i>
	 */
	native public static Pointer<Float> getAvatarPosition();
